Managed to implement delimited complexTemplates